--- a/src/index.css
+++ b/src/index.css
@@ -4,3 +4,13 @@
 * {
   font-family: "Poppins";
 }
+
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;
+  color: #f9611f
+}
+
+.hide-scrollbar {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
