completed PC UI

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,14 @@
   font-family: "Poppins";
 }
 
+@theme {
+    --breakpoint-sm: '640px',
+    --breakpoint-md: '768px',
+    --breakpoint-lg: '1024px',
+    --breakpoint-xl: '1280px',
+   --breakpoint-xxl: '1500px'
+}
+
 .hide-scrollbar::-webkit-scrollbar {
   display: none;
   color: #f9611f
